name:                pure-spinners
version:             0.8.0.0
homepage:            purehs.org/doc/pure-spinners
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-spinners.git

library
  build-depends:
    base,
    pure,
    pure-css,
    pure-theme,
    pure-styles,
    pure-txt
  exposed-modules: 
    Pure.Spinners
  hs-source-dirs:      src
  default-language:    Haskell2010
