name:                pure-spinners
version:             0.8.0.0
homepage:            purehs.org/doc/pure-spinners
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-spinners.git

library
  default-extensions:
    OverloadedStrings
    GADTs
    DataKinds
    KindSignatures
    TypeApplications
    ScopedTypeVariables
    PostfixOperators
    BlockArguments
  build-depends:
    base,
    pure,
    pure-css,
    pure-theme,
    pure-styles,
    pure-txt
  exposed-modules: 
    Pure.Spinners
    Pure.Spinners.ChasingDots
    Pure.Spinners.Circle
    Pure.Spinners.CubeGrid
    Pure.Spinners.DoubleBounce
    Pure.Spinners.FadingCircle
    Pure.Spinners.FoldingCube
    Pure.Spinners.Pulse
    Pure.Spinners.RotatingPlane
    Pure.Spinners.ThreeBounce
    Pure.Spinners.WanderingCubes
    Pure.Spinners.Wave
  hs-source-dirs:      src
  default-language:    Haskell2010
